# dotfiles

./: .envrc  .gitignore  .hyper.js  .ideavimrc  .tmux.conf  .vimrc  .zshrc  AGENTS.md  Brewfile  CLAUDE.md  README.md  apply.sh  init.sh  init.vim  karabiner.json  kitty.conf  lib.sh  test_apply.sh
tools/boom/: CLAUDE.md  Cargo.toml  README.md
tools/boom/src/: client.rs  deploy.rs  global_deploy.rs  lib.rs  main.rs  manifest.rs  monitor.rs  output.rs  prune.rs  render.rs  restart.rs
tools/boom/tests/: global_deploy.rs  manifest.rs  monitor.rs  prune.rs  render.rs  restart.rs
tools/gd/: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  coverage.sh
tools/gd/.claude/: launch.json
tools/gd/benches/: bench.rs
tools/gd/benches/fixtures/: large-diff.patch  small-diff.patch  word-heavy-diff.patch
tools/gd/e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tools/gd/e2e/fixtures/: setup.sh
tools/gd/e2e/tests/: collapsible-context.spec.ts  cursor-centering.spec.ts  fixtures.ts  full-context-navigation.spec.ts  hunk-navigation.spec.ts  keybindings.spec.ts  navigation.spec.ts  prev-hunk.spec.ts  screenshots.spec.ts  search.spec.ts  selection.spec.ts  shutdown.spec.ts  tree.spec.ts
tools/gd/src/: ansi.rs  app.rs  debug.rs  event.rs  lib.rs  main.rs  pager.rs  render.rs  style.rs  theme.rs
tools/gd/src/git/: diff.rs  mod.rs  patch.rs
tools/gd/src/nvim/: bridge.rs  grid.rs  input.rs  mod.rs
tools/gd/src/pager/: content.rs  keymap.rs  mod.rs  navigation.rs  reducer.rs  rendering.rs  runtime.rs  search.rs  state.rs  text.rs  tree.rs  types.rs
tools/gd/src/render/: mod.rs  word_diff.rs
tools/gd/src/snapshots/: gd__pager__tests__a_still_toggles_single_file.snap  gd__pager__tests__key_D_at_last_file_is_noop.snap  gd__pager__tests__key_D_shows_file_status_message.snap  gd__pager__tests__key_G_in_tree_last_entry.snap  gd__pager__tests__key_G_jumps_to_last_content.snap  gd__pager__tests__key_U_no_active_file_stuck_cursor.snap  gd__pager__tests__key_a_toggles_on_single_file.snap  gd__pager__tests__key_ctrl_d_half_page_down.snap  gd__pager__tests__key_ctrl_d_single_file_clamps_to_file_end.snap  gd__pager__tests__key_ctrl_u_half_page_up.snap  gd__pager__tests__key_ctrl_u_single_file_clamps_to_file_start.snap  gd__pager__tests__key_d_active_file_jumps_globally.snap  gd__pager__tests__key_d_at_last_hunk_is_noop.snap  gd__pager__tests__key_d_cross_file_boundary.snap  gd__pager__tests__key_d_full_context_all_context_file_is_noop.snap  gd__pager__tests__key_d_full_context_single_file_navigates_changes.snap  gd__pager__tests__key_d_next_hunk_same_file.snap  gd__pager__tests__key_d_next_hunk_scrolloff_binding.snap  gd__pager__tests__key_d_single_file_stays_within_file.snap  gd__pager__tests__key_d_single_file_within_file_works.snap  gd__pager__tests__key_d_then_u_round_trip_full_context_single_file.snap  gd__pager__tests__key_d_tree_focused_active_file_jumps_globally.snap  gd__pager__tests__key_d_tree_focused_full_context_single_file.snap  gd__pager__tests__key_d_tree_focused_single_file_stays_within.snap  gd__pager__tests__key_e_closes_focused_tree.snap  gd__pager__tests__key_esc_exits_visual.snap  gd__pager__tests__key_j_at_last_content_line_of_single_file_is_noop.snap  gd__pager__tests__key_j_in_tree_next_entry.snap  gd__pager__tests__key_j_next_content_line.snap  gd__pager__tests__key_j_skips_headers.snap  gd__pager__tests__key_n_after_toggling_single_file_off_cycles_globally.snap  gd__pager__tests__key_n_wraps_within_single_file.snap  gd__pager__tests__key_next_file_active_file_jumps_globally.snap  gd__pager__tests__key_next_file_no_active_file_does_not_stick.snap  gd__pager__tests__key_next_file_single_file_is_noop.snap  gd__pager__tests__key_prev_file_active_file_jumps_globally.snap  gd__pager__tests__key_prev_file_single_file_is_noop.snap  gd__pager__tests__key_question_enters_help.snap  gd__pager__tests__key_slash_enters_search.snap  gd__pager__tests__key_space_toggles_full_context.snap  (+28 more)
tools/gd/src/ui/: layout.rs  mod.rs  nvim_widget.rs
tools/gd/src/web/: html_render.rs  mod.rs  protocol.rs  server.rs
tools/gd/src/web_assets/: app.js  index.html  style.css
tools/gd/tests/: perf.rs
tools/gd/themes/: github-dark.tmTheme
tools/md/: CLAUDE.md  Cargo.toml  PORTING.md  README.md  browse.ts  browse_test.ts  deno.json  generate_fixtures.ts  highlight.ts  highlight_test.ts  main.ts  main_test.ts  mod.ts  pager.ts  pager_test.ts  render.ts  render_test.ts  style.ts  style_test.ts  verify_fixtures.ts  wrap.ts  wrap_test.ts
tools/md-rs/: Cargo.toml  fixtures
tools/md-rs/fixtures/browse/: should-page.json
tools/md-rs/fixtures/pager/: map-scroll-position.json
tools/md-rs/fixtures/rendering/: code-block-lang.md  frontmatter-basic.expected.txt  frontmatter-basic.md  frontmatter-empty.md  heading-h2.md  nested-list.expected.txt  table-aligned.expected.txt  table-empty.md  table-inline.expected.txt
tools/md-rs/src/: frontmatter.rs  highlight.rs  lib.rs  main.rs  pager.rs  render.rs  style.rs  wrap.rs
tools/md-rs/tests/: integration.rs
tools/md-rs/themes/: github-dark.tmTheme
tools/md/benches/: bench.rs
tools/md/benches/fixtures/: code-heavy.md  long-prose.md
tools/md/compat/: cli_tests.sh  run_compat_tests.sh
tools/md/fixtures/browse/: build-find-cmd.json  build-pick-cmd.json  parse-selection.json  shell-quote.json
tools/md/fixtures/pager/: find-matches.json  find-nearest-match.json  format-help-lines.json  format-status-bar.json  handle-search-key.json  highlight-search.json  map-to-source-line.json  parse-key.json  truncate-line.json  word-boundary.json  wrap-line-for-display.json
tools/md/fixtures/pretty/: blockquote.md  (+17 more)
tools/md/src/: browse.rs  frontmatter.rs  highlight.rs  lib.rs  main.rs  pager.rs  render.rs  style.rs  wrap.rs
tools/md/tests/: integration.rs
tools/tui/: CLAUDE.md  Cargo.toml
tools/tui/src/: ansi.rs  highlight.rs  lib.rs  pager.rs  search.rs
tools/tui/themes/: github-light.tmTheme
tools/zellij-sync-stacks/: CLAUDE.md  Cargo.toml  README.md
tools/zellij-sync-stacks/src/: main.rs
(+637 files in other folders)
