[package]
name = "boom"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
kube = { version = "0.97", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
minijinja = "2"
serde_yaml = "0.9"
serde_json = "1"
colored = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
case_sensitive_file_extension_comparisons = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
if_not_else = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
type_complexity = "allow"

[lints.rust]
unsafe_code = "deny"
