[package]
name = "gd"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
nvim-rs = { version = "0.9", features = ["use_tokio"] }
clap = { version = "4", features = ["derive"] }
similar = "2"
rmpv = "1"
unicode-width = "0.2"
futures = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"

[lints.rust]
unsafe_code = "deny"
