[package]
name = "gd"
version = "0.1.0"
edition = "2024"

[features]
default = []
web = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:serde", "dep:serde_json"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
similar = "2"
tui = { path = "../tui" }

# Web feature deps (optional)
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
if_not_else = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
type_complexity = "allow"

[lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)', 'cfg(feature, values("web"))'] }

[[bench]]
name = "bench"
harness = false
