[package]
name = "md"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = "0.13"
syntect = "5"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"

[dev-dependencies]
serde_json = "1"
