[package]
name = "md"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = "0.13"
syntect = "5"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
unicode-width = "0.2"
indexmap = { version = "2.13.0", features = ["serde"] }
tui = { path = "../tui" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Suppress pedantic lints that don't fit this codebase
cast_possible_truncation = "allow" # Terminal dimensions are always small
cast_possible_wrap       = "allow" # usize→isize after bounds checks
cast_precision_loss      = "allow" # usize→f64 for scroll ratios, intentional
cast_sign_loss           = "allow" # isize→usize after bounds checks
doc_markdown             = "allow" # Not a published library
missing_panics_doc       = "allow" # CLI binary, not a library
must_use_candidate       = "allow" # CLI binary, not a library API
similar_names            = "allow" # e.g. col_widths vs col_width — fine in context
too_many_lines           = "allow" # render_tokens is a big match state machine
unreadable_literal       = "allow" # Hex color constants like 0x79c0ff

[lints.rust]
unsafe_code = "deny"
