[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
regex = "1"
syntect = "5"
two-face = "0.5"
unicode-width = "0.2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
