[package]
name = "zellij-sync-stacks"
version = "0.1.0"
edition = "2021"

[dependencies]
zellij-tile = "0.43.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_precision_loss      = "allow"
cast_sign_loss           = "allow"
doc_markdown             = "allow"
missing_panics_doc       = "allow"
must_use_candidate       = "allow"
similar_names            = "allow"
too_many_lines           = "allow"
unreadable_literal       = "allow"

[lints.rust]
unsafe_code = "deny"
